# HiDANN

./: .gitignore  BASELINE_PATCH_NOTES.md  BASELINE_PROVENANCE.md  CMakeLists.txt  NOTICE.txt  README.md
baselines/: README.md
baselines/DiskANN/apps/: build_disk_index.cpp  build_memory_index.cpp
baselines/DiskANN/apps/utils/: CMakeLists.txt  extract_shard_data_from_ids.cpp
baselines/DiskANN/include/: cached_io.h  disk_utils.h
baselines/DiskANN/scripts/1_construction/: run_diskann_construction_limited.sh  run_vamana_construction.sh
baselines/DiskANN/scripts/2_search/: run_diskann_search_on_sigma_index_optimized.sh  run_diskann_search_optimized.sh
baselines/DiskANN/scripts/2_search/cache/: calculate_cache_budget.sh  calculate_cache_budget_optimized.sh
baselines/DiskANN/src/: CMakeLists.txt  disk_utils.cpp  partition.cpp  pq_flash_index.cpp
baselines/PipeANN/: CMakeLists.txt  build.sh
baselines/PipeANN/include/: dynamic_index.h  ssd_index.h
baselines/PipeANN/include/nbr/: abstract_nbr.h  pq_nbr.h  pq_table.h
baselines/PipeANN/scripts/: run_pipeann_search_limited.sh
baselines/PipeANN/src/: CMakeLists.txt
baselines/PipeANN/src/update/: dynamic_index.cpp
baselines/PipeANN/src/utils/: linux_aligned_file_reader.cpp
baselines/SOGAIC/: README.md  clang-format.cmake
baselines/SOGAIC/apps/: build_disk_index.cpp
baselines/SOGAIC/apps/utils/: CMakeLists.txt  sogaic_partition_data.cpp
baselines/SOGAIC/include/: pq_common.h  sogaic_partition.h  utils.h
baselines/SOGAIC/scripts/: run_sogaic_construction_limited.sh  run_sogaic_pipeline_limited.sh
baselines/SOGAIC/src/: CMakeLists.txt  disk_utils.cpp  partition.cpp  pq.cpp  sogaic_partition.cpp
construction/: CMakeLists.txt  README.md  our_construction.cpp  our_pruning.cpp  reverse_edge_logic.cpp  run_sigma_pipeline.py
docs/: DEPENDENCIES.md  PAPER_REPRODUCTION_NOTES.md  PIPELINES.md
include/: aligned_file_reader.h  concurrent_queue.h  in_mem_data_store.h  index.h  linux_aligned_file_reader.h  percentile_stats.h  scratch.h  utils.h
repro/figures/: README.md  plot_dataset_reproduction.py
scripts/: check_system.sh  compute_fbin_medoid.py  download_paper_msturing.sh  download_paper_vibe_datasets.py  download_vibe_simplewiki.py  extract_shard_data_from_ids.py  make_toy_dataset.py  preflight_aio.py  run_artifact_pipeline.sh  run_dataset_comparison.sh  run_dataset_pipeline.sh  run_paper_dataset_comparison.sh  summarize_dataset_comparison.py  summarize_dataset_quality.py  summarize_dataset_run.py
search/: CMakeLists.txt  README.md  ours_cache_gen.cpp  ours_data_interfaces.cpp  ours_data_interfaces.h  ours_search.cpp  ours_search.h  ours_search_main.cpp
src/: CMakeLists.txt  disk_utils.cpp  index.cpp  linux_aligned_file_reader.cpp  partition.cpp  pq.cpp  scratch.cpp
tools/: CMakeLists.txt  create_disk_layout.cpp  evaluate_memory_index_quality.cpp
